[package]
name = "tantivy-commoncrawl"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]

[dependencies]
warc_parser = "1.0.1"
curl = "0.4"
structopt = "0.1"
structopt-derive = "0.1"
log = "0.4"
env_logger = "0.4.3"
tantivy = {path = "../tantivy"}
whatlang = "0.5"
serde_json = "*"
chan = "0.1.19"
itertools = "0.7.4"
libflate = "0.1"
nom = "2.0"